// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigramBlockSmall test BigramBlockSmall position 0 snapshot 1`] = `
<div
  className="mr-4"
>
  <img
    alt="taiji"
    className="taijiPic"
    src={
      Object {
        "process": [Function],
      }
    }
  />
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder "
    />
    <div
      className="bigramBlock blockBottomBorder selected"
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder "
    />
    <div
      className="bigramBlock "
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;

exports[`BigramBlockSmall test BigramBlockSmall position 1 snapshot 1`] = `
<div
  className="mr-4"
>
  <img
    alt="taiji"
    className="taijiPic"
    src={
      Object {
        "process": [Function],
      }
    }
  />
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder selected"
    />
    <div
      className="bigramBlock blockBottomBorder "
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder "
    />
    <div
      className="bigramBlock "
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;

exports[`BigramBlockSmall test BigramBlockSmall position 2 snapshot 1`] = `
<div
  className="mr-4"
>
  <img
    alt="taiji"
    className="taijiPic"
    src={
      Object {
        "process": [Function],
      }
    }
  />
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder "
    />
    <div
      className="bigramBlock blockBottomBorder "
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder selected"
    />
    <div
      className="bigramBlock "
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;

exports[`BigramBlockSmall test BigramBlockSmall position 3 snapshot 1`] = `
<div
  className="mr-4"
>
  <img
    alt="taiji"
    className="taijiPic"
    src={
      Object {
        "process": [Function],
      }
    }
  />
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder "
    />
    <div
      className="bigramBlock blockBottomBorder "
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder "
    />
    <div
      className="bigramBlock selected"
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;
